--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,79 @@
 
-    
-@keyframes animateLogo {
-    from {width: 25px; opacity: 0;}
-    to {width: 475px; opacity: 1;}
-}
-
-#logo {
-animation: 5s;
-animation-iteration-count: 1;
-animation-name: animateLogo;
-}
-
-
 body {
     font-family: "neue-haas-grotesk-display", sans-serif;
     font-weight: 400;
     font-style: normal;background-color: #ffffff;
 }
+
+body{
+  margin: 0;
+  padding: 0;
+  font-size: 16pt; 
+}
+
+header{
+  background: #fff;
+  border-bottom: 3px solid #50C7C7;
+  margin-bottom:20px
+}
+
+h1{
+  font-size: 2em;
+  text-align: center;
+  line-height: 2;
+}
+
+h2{
+  font-size: 1.5em;
+  text-align: center;
+  padding: 5px;
+}
+
+p {
+  padding: 0 30px;
+}
+
+a.skip{
+  background: rgb(26, 26, 26);
+  left: 0;
+  padding: 6px;
+  position: absolute;
+  top: -40px;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 1;
+}
+
+a.skip:focus{
+  top:20px;
+  color: black;
+  text-decoration-style: solid;
+}
+
+*:focus{
+  border: 2px solid black;
+}
+
+
+.nav_item a{
+  padding: 10px;
+}
+
+.nav_item a:hover, a:focus{
+  color: #50C7C7;
+  text-decoration: underline;
+  -webkit-text-decoration-style: dotted;
+          text-decoration-style: dotted;
+}
+
+
+footer{
+  background-color: black;
+  color: white;
+  padding: 30px;
+  text-align: center;
+}
+
 
 header {
 display: flex;
@@ -136,62 +193,74 @@ nav {
 }
 }
 
-
-
 /* Footer styles */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
 footer {
-    background-color: #f7f7f7;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #f7f7f7;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: auto;
+}
+
+nav {
+  margin: 0;
+}
+
+#footer {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#footer li {
+  margin-right: 20px;
+}
+
+#footer li:last-child {
+  margin-right: 0;
+}
+
+#footer a {
+  color: #333;
+  text-decoration: none;
+}
+
+.logo {
+  max-width: 100px;
+}
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 768px) {
+  footer {
+    flex-direction: column;
+    text-align: center;
   }
-  
-  nav {
-    margin: 0;
-  }
-  
-  #footer {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  #footer li {
-    margin-right: 20px;
-  }
-  
-  #footer li:last-child {
-    margin-right: 0;
-  }
-  
-  #footer a {
-    color: #333;
-    text-decoration: none;
-  }
-  
+
   .logo {
-    max-width: 100px;
+    margin-top: 20px;
   }
-  
-  /* Media query for smaller screens */
-  @media only screen and (max-width: 768px) {
-    footer {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    .logo {
-      margin-top: 20px;
-    }
-  
-    #footer li {
-      margin: 10px 0;
-    }
-  
-    #footer li:last-child {
-      margin-bottom: 0;
-    }
+
+  #footer li {
+    margin: 10px 0;
   }
-  
+
+  #footer li:last-child {
+    margin-bottom: 0;
+  }
+
+  #footer li {
+    margin-left: 10px;
+  }
+}
