--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@
       
 
   }
-/* Show the menu only on iPads and phones */
+
 @media (max-width: 1024px) {
     
     #deskToggle {
@@ -135,7 +135,6 @@
       background: #ededed;
       list-style-type: none;
       -webkit-font-smoothing: antialiased;
-      /* to stop flickering of text in safari */
       transform-origin: 0% 0%;
       transform: translate(-100%, 0);
       transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
@@ -150,3 +149,37 @@
       transform: none;
     }
   }
+
+  .page-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    margin: 0;
+  }
+  
+  .page-header h1 {
+    margin-top: 20px;
+    font-size: 36px;
+    text-align: center;
+  }
+  
+  .page-header p {
+    margin-top: 10px;
+    font-size: 24px;
+    text-align: center;
+  }
+  
+  .page-header img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  #main-text {
+    font-family: "freight-big-pro", serif;
+    font-weight: 400;
+    padding: 25px;
+    font-style: normal;
+  }
+  
