--- a/css/about.css
+++ b/css/about.css
@@ -80,8 +80,62 @@
     max-width: 100%;
     width: 500px;
     height: 300px;
-  
   }
+  
+  #grid1 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid2 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid3 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid4 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid5 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid6 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid7 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid8 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }
+  
+  #grid9 {
+    max-width: 100%;
+    width: 500px;
+    height: 300px;
+  }  
+
 
 
   .images_grid {
