--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 
 header{
   background: #fff;
-  border-bottom: 3px solid #50C7C7;
+  border-bottom: 3px solid #000000;
   margin-bottom:20px
 }
 
@@ -60,7 +60,7 @@ a.skip:focus{
 }
 
 .nav_item a:hover, a:focus{
-  color: #50C7C7;
+  color: #2d4343;
   text-decoration: underline;
   -webkit-text-decoration-style: dotted;
           text-decoration-style: dotted;
@@ -81,104 +81,14 @@ align-items: center;
 flex-direction: column;
 }
 
-.nav_links {
-display: flex;
-flex-direction: column; /* confused what this does */
-}
 
-.nav_links li a:visited {
-color: blue;
-}
 
-.card > header {
-background: #288088;
-border: solid 2px #45ADAD;
-padding-top: 20px;
-padding-bottom: 20px;
-border-top-left-radius: 50px;
-border-top-right-radius: 50px;
-}
-
-.card {
-flex-basis: 450px;
-border-top-left-radius: 50px;
-border-top-right-radius: 50px;
-}
-
-.pricing {
-display: flex;
-justify-items: center;
-align-items: center;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: center;
-}
-
-.gallery img {
-border: solid 10px #50C7C7;
-margin: 10px;
-width: 300px;
-}
-
-.gallery {
-justify-content: center;
-display: flex;
-flex-wrap: wrap;
-}
-
-@media screen and (min-width: 900px) {
-header, .nav_links {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pricing, .card {
-    flex-basis: 275px;
-}
 
 a + header {
     top: 0px;
     position: sticky;
 }
-}
 
-@media screen and (prefers-reduced-motion: reduce) {
-#logo {
-    animation: slide none;
-}
-}
-
-@media print {
-body {
-    font-family: arial, helvetica;
-    background-image: none;
-}
-
-.nav_links {
-    justify-content: space-around;
-    flex-direction: row;
-}
-
-nav {
-    width: 100%;
-}
-
-.pricing {
-    align-items: flex-end;
-    display: flex;
-    border-bottom-left-radius: none;
-    border-bottom-right-radius: none;
-    flex-wrap: nowrap;
-}
-
-.cards {
-    border: solid 2px #45ADDD;
-    flex-basis: 325px;
-    border-bottom-left-radius: none;
-    border-bottom-right-radius: none;
-}
 
 .gallery {
     display: none;
@@ -190,7 +100,6 @@ nav {
 
 .card li:nth-child(2)::after {
     content:"\1F44D";
-}
 }
 
 /* Footer styles */
